fix: patch up font

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,12 @@
   --text-color: #ffffff;
 }
 
+@theme {
+  --font-sans: 'Bricolage Grotesque', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
 body {
-  font-family: "Bricolage Grotesque", sans-serif;
+  font-family: "Bricolage Grotesque", sans-serif !important;
   font-optical-sizing: auto;
 }
 
