--- a/src/index.css
+++ b/src/index.css
@@ -117,3 +117,26 @@ body {
   width: 100%;
 }
 
+.wrapper {
+  --breathing-room: 16px;
+
+  display: grid;
+  grid-template-columns:
+    1fr
+    min(96rem, 100%)
+    1fr;
+  padding-left: var(--breathing-room);
+  padding-right: var(--breathing-room);
+}
+.wrapper > * {
+  grid-column: 2;
+}
+.full-bleed {
+  grid-column: 1 / -1;
+  margin-left: calc(
+    var(--breathing-room) * -1
+  );
+  margin-right: calc(
+    var(--breathing-room) * -1
+  );
+}
