fix: patch up product descriptions

--- a/app/globals.css
+++ b/app/globals.css
@@ -123,3 +123,19 @@
     @apply bg-background text-foreground;
   }
 }
+
+ul.list-node {
+  @apply list-disc;
+}
+
+ul.list-node li {
+  @apply list-item ml-6;
+}
+
+ol.list-node {
+  @apply list-decimal;
+}
+
+ol.list-node li {
+  @apply list-item ml-6;
+}
